--- a/useMeBE/appsettings.json
+++ b/useMeBE/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": " Server=LAPTOP-D7K671M0;Database=useMeDatabase;Trusted_Connection=True;TrustServerCertificate=True"
+  }
+
 }
